# BMGateway

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
docs/: 2026-04-19-bm6-bm200-integration-notes.md  2026-04-25-bm-protocol-research-handoff.md  2026-04-25-bm300-bm7-integration-notes.md  README.md  protocol-probe-tools.md
docs/architecture/: 2026-04-20-shared-core-separate-web-runtime-plan.md  2026-04-22-service-account-and-privilege-hardening-proposal.md  2026-04-23-usb-otg-image-export-test.md  2026-04-24-optional-live-ble-monitoring-proposal.md  2026-04-26-history-backfill-integration-proposal.md  2026-04-27-bm200-byte4-profiling-and-stitch-proposal.md  2026-04-30-bm300-byte7-multipage-investigation-plan.md
docs/research/: 2026-04-17-pi3b-web-and-os-research.md
docs/specs/: 2026-04-17-foundation-spec.md
home-assistant/: README.md  contract.md  setup.md
home-assistant/dashboards/: bm_gateway.yaml
home-assistant/discovery/: homeassistant__device__bm200_house__config.json  homeassistant__device__bm300_van__config.json  homeassistant__device__bm_gateway__config.json
python/: README.md
python/config/: config.schema.json  config.toml.example  devices.toml  devices.toml.example  gateway.toml.example
python/tests/: test_audit_log.py  test_bluetooth_lock.py  test_bluetooth_recovery.py  test_bm200.py  test_bm200_history.py  test_bm300.py  test_bm300_multipage.py  test_bootstrap_install_script.py  test_cli.py  test_cli_history.py  test_cli_run_persistence.py  test_config.py  test_dev_deploy_script.py  test_device_registry.py  test_e2e_subprocess.py  test_localization.py  test_mqtt.py  test_packaging_web_split.py  test_protocol_analysis.py  test_protocol_probe.py  test_rpi_setup_bootstrap.py  test_runtime_live.py  test_state_store_retention.py  test_subprocess_runner.py  test_usb_otg_boot_mode_script.py  test_usb_otg_export.py  test_web_management.py
rpi-setup/: README.md  hardware-audit.md  macos-imager-cli.md  manual-setup.md
rpi-setup/ansible/: README.md  inventory.example.ini  playbook.yml
rpi-setup/scripts/: install-service.sh  macos-imager-cli.sh  update-service.sh  usb-otg-boot-mode.sh  usb-otg-frame-test.sh
rpi-setup/systemd/: bm-gateway-web.service  (+2 more)
scripts/: bootstrap-install.sh  dev-deploy.sh  generate-spf71e-test-images.sh
web/: .dockerignore  Dockerfile  README.md  compose.yaml
(+59 files in other folders)
