[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bm-gateway"
version = "0.1.1"
description = "Battery monitor gateway mono-repo with Python CLI/service, Home Assistant integration, Raspberry Pi setup, and web interface"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Marco Massari Calderone" },
  { name = "OpenAI" }
]
dependencies = [
  "bleak>=0.22.3",
  "paho-mqtt>=2.1.0",
  "pycryptodome>=3.21.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pillow>=10.4.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]
usb-otg = [
  "pillow>=10.4.0",
]

[project.scripts]
bm-gateway = "bm_gateway.cli:main"
bm-gateway-web = "bm_gateway.web_cli:main"

[tool.setuptools.package-dir]
"" = "python/src"

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
bm_gateway = ["assets/*.css", "assets/*.js", "assets/*.svg", "assets/*.png", "assets/*.webmanifest"]
"bm_gateway.locales" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
files = ["python/src", "python/tests"]
strict = true
